--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-    <!-- <form id="socialForm">
+    <form id="socialForm">
         <div id="socialFields">
             <div class="social-field">
                 <label for="socialSelect">Select Social Media:</label>
@@ -45,53 +45,13 @@
         <button type="button" id="addSocialField">Add Social Media</button>
         <button type="button" id="preview">Preview</button>
     </form>
--->
-    <button type="submit" id="addSocialLinks">Click Here to see Socail Icons</button>
 
+    <button type="submit" id="addSocialLinks">Click Here to see Socail Icons</button>
+<a href="http://harshilchovatiya.github.io/Web-Apps/src/slider/slider.html">Slider</a>
+<a href="http://harshilchovatiya.github.io/Web-Apps/src/contactCard.html">Contact</a>
+<a href="http://harshilchovatiya.github.io/Web-Apps/exp.html">Form</a>
 
 
 </body>
 
 </html>
-<!-- 
-    Logo
-    Background Poster
-    Name 
-    TagLine
-    Description
-    
-    1st Staring with this sections{
-        socical Icons with the name and Links
-    } is Done With Form
-     
-    Whatsapp no. sticky
-    2nd {
-        Contacts ==> Email, Phone number , Address  
-    } is Done at the ==>contactCard.html
-
-
-    Genrate  Qr Code of the links(Contacts)
-
-
-    3rd{
-        Services, 
-        ==> 1 or more >> Name, Photos, Descriptions , Link to open the  new page
-    }is Done it at the Services.html
-
-    4th{   SAME LIKE SERVIVES==||
-                        VV
-    Products, (Same as the Services),
-    }
-
-    Testinomial  ==> Slider Name, photo and description.
-    Business Hours ==> Day wise the timing and today's selected 
-    Appoinment ==> Date-Time Picker
-    Enqiries Form ==> Name, Email ,Phone, Messages]
-    Location Link from the user
-
-
-    Extra Share popup 
-    Qr Code ==> Website Link
-    Add To contact Scripting
-    Download the vcf Fie (Contact file with  the name email phone address and the website links )
- -->
